fixed the market page(customer) and simplified the code / fixed the overflow bug in the createticket(organizer) page

--- a/frontend/src/style/signUp.css
+++ b/frontend/src/style/signUp.css
@@ -9,7 +9,7 @@
 
   .forms-wrapper{
     background-color: #212121;
-    width: 30%;
+    width: 50%;
   }
   
   .form-box {
